Restructure form elements, built pl fitler example

--- a/web/themes/citizen_patterns/components/_patterns/01-parts/03-buttons/_buttons.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-parts/03-buttons/_buttons.scss
@@ -199,7 +199,7 @@ button{
 .button-submit{
 	@include submitButton;
 }
-.button-warning{
+.button-caution{
 	@include cautionButton;
 }
 .button-danger-robinson{
