--- a/web/themes/citizen_patterns/components/_patterns/03-composites/03-views/_00-views.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/03-views/_00-views.scss
@@ -35,3 +35,12 @@
 		}
 	}
 }//end inline image row
+
+
+/* GLOBAL VIEWS SETTINGS */
+.view-empty{
+	margin-bottom: $spaceLg;
+	max-width: $textMax;
+	@include auto;
+}
+
