--- a/web/themes/citizen_patterns/templates/zzz-custom/navigation/pager.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/navigation/pager.html.twig
@@ -29,94 +29,14 @@
  * @see template_preprocess_pager()
  */
 #}
-{% if items %}
-  <nav class="pager" aria-labelledby="pagination-heading">
-    <div id="pagination-heading" class="visually-hidden">{{ 'Pagination'|t }}</div>
 
-    {% block pager %}
-      <ul class="pager__items js-pager__items">
+{% import '@base/macros.twig' as style %}
 
-        {# Print first item if we are not on the first page. #}
-        {# {% block first %}
-          {% if items.first %}
-            <li class="pager__item pager__item--first">
-              <a href="{{ items.first.href }}" title="{{ 'Go to first page'|t }}"{{ items.first.attributes|without('href', 'title') }}>
-                <span class="visually-hidden">{{ 'First page'|t }}</span>
-                <span aria-hidden="true">{{ items.first.text|default('« First'|t) }}</span>
-              </a>
-            </li>
-          {% endif %}
-        {% endblock %} #}
-
-        {# Print previous item if we are not on the first page. #}
-        {% block previous %}
-          <li class="pager__item pager__item--previous{% if not items.previous %} disabled{% endif %}">
-            <a href="{{ items.previous.href }}" title="{{ 'Go to previous page'|t }}" rel="prev"{{ items.previous.attributes|without('href', 'title', 'rel') }}>
-              <span class="visually-hidden">{{ 'Previous page'|t }}</span>
-              <span aria-hidden="true">{{ items.previous.text|default('« Prev'|t) }}</span>
-            </a>
-          </li>
-        {% endblock %}
-
-        {# Add an ellipsis if there are further previous pages. #}
-        {# {% block prevDots %}
-          {% if ellipses.previous %}
-            <li class="pager__item pager__item--ellipsis" role="presentation">&hellip;</li>
-          {% endif %}
-        {% endblock %}
- #}
-        {# Now generate the actual pager piece. #}
-        {% block pages %}
-          {{ attach_library('citizen_patterns/pager') }}
-          <li class="pager__current">
-            {% trans %}Page{% endtrans %} {{ current }} {% trans %}of {% endtrans %}
-          </li>
-          {% for key, item in items.pages %}
-            <li class="pager__item{{ current == key ? ' is-active' : '' }} pager__number">
-              {% if current == key %}
-                {% set title = 'Current page'|t %}
-              {% else %}
-                {% set title = 'Go to page @key'|t({'@key': key}) %}
-              {% endif %}
-              <a href="{{ item.href }}" title="{{ title }}"{{ item.attributes|without('href', 'title') }}>
-                <span class="visually-hidden">
-                  {{ current == key ? 'Current page'|t : 'Page'|t }}
-                </span>
-                {{- key -}}
-              </a>
-            </li>
-          {% endfor %}
-        {% endblock %}
-
-        {# Add an ellipsis if there are further next pages. #}
-        {# {% block nextDots %}
-          {% if ellipses.next %}
-            <li class="pager__item pager__item--ellipsis" role="presentation">&hellip;</li>
-          {% endif %}
-        {% endblock %} #}
-
-        {# Print next item if we are not on the last page. #}
-        {% block next %}
-          <li class="pager__item pager__item--next{% if not items.next %} disabled{% endif %}">
-            <a href="{{ items.next.href }}" title="{{ 'Go to next page'|t }}" rel="next"{{ items.next.attributes|without('href', 'title', 'rel') }}>
-              <span class="visually-hidden">{{ 'Next page'|t }}</span>
-              <span aria-hidden="true">{{ items.next.text|default('Next »'|t) }}</span>
-            </a>
-          </li>
-        {% endblock %}
-
-        {# Print last item if we are not on the last page. #}
-        {# {% block last %}
-          {% if items.last %}
-            <li class="pager__item pager__item--last">
-              <a href="{{ items.last.href }}" title="{{ 'Go to last page'|t }}"{{ items.last.attributes|without('href', 'title') }}>
-                <span class="visually-hidden">{{ 'Last page'|t }}</span>
-                <span aria-hidden="true">{{ items.last.text|default('Last »'|t) }}</span>
-              </a>
-            </li>
-          {% endif %}
-        {% endblock %} #}
-      </ul>
+{% embed '@chunks/03-pagers/pager.twig' %}
+  {% block countShim %}{# remove PL only content #}{% endblock %}
+  {% if style.pagerSettings == 'smart' %}
+    {% block library %}
+      {{ attach_library('citizen_patterns/pager') }}
     {% endblock %}
-  </nav>
-{% endif %}
+  {% endif %}
+{% endembed %}
