--- a/web/themes/citizen_patterns/components/_patterns/01-parts/06-forms/forms.twig
+++ b/web/themes/citizen_patterns/components/_patterns/01-parts/06-forms/forms.twig
@@ -14,9 +14,10 @@
 			with{
 				type: element.type,
 				label: element.label,
+				classes: element.classes,
 				options: element.options,
 				placeholder: element.placeholder,
-				description: element.description
+				description: element.description,
 			}
 		%}
 	{% endfor %}
