--- a/web/themes/citizen_patterns/components/_patterns/02-chunks/02-filters/filters.twig
+++ b/web/themes/citizen_patterns/components/_patterns/02-chunks/02-filters/filters.twig
@@ -7,6 +7,7 @@
 			with{
 				type: filterItem.type,
 				label: filterItem.label,
+				classes: filterItem.classes,
 				options: filterItem.options,
 				placeholder: filterItem.placeholder,
 				description: filterItem.description
