--- a/web/themes/citizen_patterns/components/_patterns/03-composites/04-layout/01-header/_site-header.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/04-layout/01-header/_site-header.scss
@@ -39,7 +39,7 @@
 
 /* SEARCH BLOCK PLACEMENT
 ------------------- */
-.block-search-form-block{
+.block-site-search{
 	position: static;
 	display: inline-block;
 	text-align: right;
