Newsletter and social media blocks

--- a/web/themes/citizen_patterns/components/_patterns/01-parts/08-fields/01-social-platforms/_field-platforms.twig
+++ b/web/themes/citizen_patterns/components/_patterns/01-parts/08-fields/01-social-platforms/_field-platforms.twig
@@ -1,11 +1,5 @@
 {#
-/**
- * @file
- * Theme override for a field.
- *
- * Sets the link content and icon based on the url found for each link in the platforms link field.
- *
-*?
+DRUPAL: This template is inherited into the field-field-platforms.html.twig template.
 #}
 
 {% if 'facebook' in url %}
