--- a/web/themes/citizen_patterns/components/_patterns/02-chunks/02-filters/filters.twig
+++ b/web/themes/citizen_patterns/components/_patterns/02-chunks/02-filters/filters.twig
@@ -1,5 +1,5 @@
 {#
-	STYLEGUIDE ONLY: This template is not brought into to Drupal.
+	STYLEGUIDE ONLY
 #}
 <form class="views-exposed-form">
 	{% for filterItem in filters %}
