--- a/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/03-superfish/_superfish-block.twig
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/03-superfish/_superfish-block.twig
@@ -1,5 +1,5 @@
 {#
- Drupal: This file is embedded in the site-header.twig pattern lab file and in the superfish main Drupal block. Menu alignment macros define the position in the header: left, right, center.
+ Drupal: This template is inherited into the block--superfish--main.html.twig template.
 #}
 
 		 
