--- a/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/04-footer/_footer-copyright.twig
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/04-footer/_footer-copyright.twig
@@ -1,5 +1,5 @@
 {#
- Drupal: This file is extended in the site-footer.twig pattern lab file and in the footer-copyright Drupal block.
+ Drupal: This file is inherited in the footer-copyright Drupal block.
 #}
 
 <div class="field body copyright">
