--- a/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/05-newsletter/_newsletter.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/05-newsletter/_newsletter.scss
@@ -4,19 +4,19 @@
 
 .block-newsletter{
 	.field.body{
+		margin-bottom: $spaceMd;
 		& > *:last-child{
 			margin-bottom: 0;
 		}
 		&.has-modal{
+			margin-bottom: 0;
 			& > *:nth-last-child(2){
 				display: inline;
 			}
 		}
 		a{
-			color: $prefooterLink;
 			text-decoration: underline;
 			&:hover,&:focus{
-				color: $prefooterLinkHover;
 				text-decoration: none;
 			}
 		}
@@ -33,10 +33,12 @@
 		}
 		#mce-EMAIL{
 			@include textInput;
+			border-radius: 0;
 		}
 		#mc-embedded-subscribe{
 			@include submitButton;
 			width: auto;
+			border-radius: 0;
 		}
 	}
 	.ctct-form-custom{
