--- a/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/05-newsletter/_newsletter.twig
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/05-newsletter/_newsletter.twig
@@ -1,11 +1,6 @@
 {#
- Drupal: This file is extended in the site-footer.twig pattern lab file and in the newsletter Drupal block.
+ Drupal: This file is extended in newsletter Drupal block.
 #}
-
-
-{% if plLabel %}
-	<h2 class="block-title">{{- plLabel -}}</h2>
-{% endif %}
 
 {% if intro %}
 	<div class="field body{% if modal == 'On' %} has-modal{% endif %}">
