--- a/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/06-social-media-links/_social-media-links.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/06-social-media-links/_social-media-links.scss
@@ -6,5 +6,10 @@
 	.field.body{
 		margin-bottom: $spaceSm;
 	}
+	.platform-links{
+		@include onlySmall{
+			@include safeFlex(row,wrap,center,start);
+		}
+	}
 }//end block social-media-links
 
