--- a/web/themes/citizen_patterns/components/_patterns/01-parts/06-forms/_form-element.twig
+++ b/web/themes/citizen_patterns/components/_patterns/01-parts/06-forms/_form-element.twig
@@ -1,5 +1,5 @@
 {#
-	STYLEGUIDE ONLY: This template is not brought into to Drupal.
+	STYLEGUIDE ONLY
 #}
 {% import '@base/macros.twig' as styles %}
 
