--- a/web/themes/citizen_patterns/components/_patterns/02-chunks/05-modals/_modals.scss
+++ b/web/themes/citizen_patterns/components/_patterns/02-chunks/05-modals/_modals.scss
@@ -11,6 +11,7 @@
 	z-index: 501;
 	background: $modalBack;
 	.modal-inner{
+		display: none;
 		position: absolute;
 		top: 50%;
 		left: 50%;
@@ -52,11 +53,16 @@
 		}
 	}//end modal-header
 	.modal-content{
-		display: none;
 		overflow-y: scroll;
 		padding: 2rem 2rem 4rem;
 		overflow-x: hidden;
 		color: $modalContent;
+		.modal-intro{
+			margin-bottom: $spaceMd;
+			& > *:last-child{
+				margin-bottom: 0;
+			}
+		}
 		input:focus{
 			cursor: pointer;
 		}
