--- a/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/_00-block.twig
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/_00-block.twig
@@ -9,7 +9,7 @@
     {{ title_prefix }}
     {% block blockLabel %}
       {% if label %}
-        <h2 class="block-title">{% block labelText %}This is the block title{% endblock %}</h2>
+        <h2 class="block-title">{% block labelText %}{{ label }}{% endblock %}</h2>
       {% endif %}
     {% endblock %}
     {{ title_suffix }}
