Move paragraphs base templates into PL, update accordions

--- a/web/themes/citizen_patterns/components/_patterns/05-assembly/02-styleguide/styleguide.scss
+++ b/web/themes/citizen_patterns/components/_patterns/05-assembly/02-styleguide/styleguide.scss
@@ -649,6 +649,12 @@ $subGroupHeaderBack  : $darkGrey;
 }
 
 /* PARAGRAPHS */
+//global
+.paragraphs-layout{
+	padding: 0 20px;
+}
+
+//gallery
 .paragraph--type--gallery{
 	max-width: $contentStop;
 	@include auto;
@@ -673,7 +679,7 @@ $subGroupHeaderBack  : $darkGrey;
 	&:not(:first-child){
 		display: none;
 	}
-}
+}//end gallery
 
 
 
