--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/01-accordion/_accordion.twig
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/01-accordion/_accordion.twig
@@ -1,14 +1,12 @@
 {#
-  STYLEGUIDE ONLY: This template is embedded into the Drupal accordion-group paragraph template and used in the Pattern Lab accordion group template.
+ 	DRUPAL: This template is extended into the Drupal paragraph--accordion-group.html.twig.
 #}
-
-{{ accordion_instructions }}
 
 <div class="accordion-item" aria-label="Accordion">
 	<div class="accordion-header">
-        <a href="#" role="button" aria-controls="{{ accordion_control }}" aria-expanded="false">{{accordion_header}}</a>
-    </div>
-	<div class="field field-long-text" id="{{ accordion_control }}" aria-hidden="true">
-		{{accordion_content}}
+		<a href="#" role="button" aria-controls="{{ accordionControl }}" aria-expanded="false">{{ accordionHeader }}</a>
+	</div>
+	<div class="field field-long-text" id="{{ accordionControl }}" aria-hidden="true">
+		{{ accordionContent }}
 	</div>
 </div>
