--- a/web/themes/citizen_patterns/templates/zzz-custom/widgets/00-base/field--node--field-paragraphs.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/widgets/00-base/field--node--field-paragraphs.html.twig
@@ -68,10 +68,16 @@ set classes = [
 {# paragraphs field #}
 <div{{ attributes.addClass(classes) }}>
 	{%- for item in items -%}
-		<div class="section{% if (item.content['#paragraph'].field_style.0) %} background {{ item.content['#paragraph'].field_style.0.entity.name.0.value|clean_class }}{% else %} backless{% endif %}{% if item.content['#paragraph'].field_layout.0 %} {{ item.content['#paragraph'].field_layout.0.value }}{% endif %}">
-			{% set anchor = item.content['#paragraph'].field_anchor_link.0.value|clean_id %}
-			{%- if anchor -%}<a name="anchor-{{ anchor }}" id="anchor-{{ anchor }}"></a>{%- endif -%}
-			{{- item.content -}}
-		</div>
+		{% embed '@composites/02-paragraphs/00-base/_paragraphs-field-item.twig' 
+			with{
+				background: item.content['#paragraph'].field_style.0.entity.label|clean_class,
+				layout: item.content['#paragraph'].field_layout.0.value,
+				anchor: item.content['#paragraph'].field_anchor_link.0.value|clean_id
+			}
+		%}
+			{# hide PL specific structure #}
+			{% block plOpen %}{% endblock %}
+			{% block plClose %}{% endblock %}
+		{% endembed %}
 	{%- endfor -%}
 </div>
