--- a/web/themes/citizen_patterns/templates/zzz-custom/widgets/block-placer/paragraph--block-placer.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/widgets/block-placer/paragraph--block-placer.html.twig
@@ -37,25 +37,20 @@
  */
 #}
 
+{% embed '@composites/02-paragraphs/00-base/_paragraph.twig' 
+	with{
+		type: paragraph.bundle|clean_class,
+		viewMode: view_mode|clean_class,
+		id: paragraph.id.value,
+		sectionTitle: '',
+		sectionIntro: '',
+		widgetTitle: content.field_widget_title.0['#context'].value,
+	}
+%}
+	{% block widgetContent %}
+		<div data-quickedit-entity-id="{{ content.field_block.0['#attributes']['data-quickedit-entity-id'] }}" class="block block-{{ content.field_block.0['#block_content'].label|clean_class }} block-{{ content.field_block.0['#block_content'].bundle|clean_class }}">
+			{{- content.field_block -}}
+		</div>
+	{% endblock %}
 
-{# NOTES
-------------
-	This is the parent paragraphs template. Other paragraphs templates can extend this template as needed by
-	inheriting and altering the blocks defined here.
-	Field templates can also overview content set here (example: field--paragraph--field-widget-title.html.twig which sets all titles h2.pane-title)
-#}
-
-{% extends "paragraph.html.twig" %}
-
-{# NOTE: No content is allowed outside of {% block widgetContent %} #}
-{% block widgetContent %}
-
-	{{- content.field_widget_title -}}
-
-	<div data-quickedit-entity-id="{{ content.field_block.0['#attributes']['data-quickedit-entity-id'] }}" class="block block-{{ content.field_block.0['#block_content'].label|clean_class }} block-{{ content.field_block.0['#block_content'].bundle|clean_class }}">
-		{{- content.field_block -}}
-	</div>
-	
-{# NOTE: No content allowed past this point #}
-{% endblock %}
-
+{% endembed %}
