--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/04-gallery/pl-gallery.twig
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/04-gallery/pl-gallery.twig
@@ -19,13 +19,18 @@
     </div>
   </div>
 
+{% if widgetTitle %}
+   <div class="widget-title">{{ widgetTitle }}</div>
+{% endif %}
+
 <div class="galleries-holder">
   {% for gallery in galleries %}
-    {% include "@composites/02-paragraphs/04-gallery/_gallery.twig"
-      with{
-        widgetTitle: gallery.widgetTitle,
-        galleryType: gallery.galleryType
-      }
-    %}
+    <div class="paragraph--type--gallery {{ gallery.galleryType}}">
+      {% include "@composites/02-paragraphs/04-gallery/_gallery.twig"
+        with{
+          galleryType: gallery.galleryType
+        }
+      %}
+    </div>
   {% endfor %}
 </div>
